python/test-data/testTypesSequence2.err
Traceback (most recent call last):
  File "test-data/testTypesSequence2.py", line 9, in <module>
    foo("Hello!") # should fail
WyppTypeError: got value of wrong type
given:    'Hello!'
expected: value of type Sequence[int]

context: foo(seq: Sequence[int]) -> None
                  ^^^^^^^^^^^^^
declared at: test-data/testTypesSequence2.py:3
caused by: test-data/testTypesSequence2.py:9
  | foo("Hello!") # should fail
